samples/_failures_safe/1761514501_9d1329_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1a0b6494.c: In function ‘main’:
./samples/SAFE/__tmp_1a0b6494.c:167:21: error: expected ‘)’ at end of input
  167 |     if (strlen(input
      |               ~     ^
      |                     )
./samples/SAFE/__tmp_1a0b6494.c:167:5: error: expected declaration or statement at end of input
  167 |     if (strlen(input
      |     ^~
